# Rest2Xlsx

./: README.md
Sources/: .gitignore  CMakeLists.txt  apt-install.sh  apt.txt  build.sh  git-clone-deps.sh  main.cpp
Sources/include/: DataPipeline.h  HelloWorld.h  JsonParser.h  RestClient.h  XlsxWriter.h
Sources/src/: DataPipeline.cpp  HelloWorld.cpp  JsonParser.cpp  RestClient.cpp  XlsxWriter.cpp  main.cpp
